Update name into package.json

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "project-1a-maths",
+  "name": "project-1a-maths-alordco",
   "version": "1.0.0",
   "description": "Basic math project to learn NodeJs and load it to NPM.",
   "main": "index.js",
